--- a/themes/mypaper/layouts/_default/list.html
+++ b/themes/mypaper/layouts/_default/list.html
@@ -23,7 +23,7 @@
    <p>{{ .Summary | plainify | htmlUnescape }}...</p>
   </section>
   <footer class="entry-footer">
-    <time>{{ .Date.Format "January 2, 2006" }}</time>
+    <time>{{ .Date.Format "2006-01-02" }}</time>
   </footer>
   <a class="entry-link" href="{{ .Permalink }}"></a>
 </article>
