--- a/themes/mypaper/layouts/_default/single.html
+++ b/themes/mypaper/layouts/_default/single.html
@@ -6,7 +6,7 @@
     <div class="post-meta">
       {{- if or .Params.Author .Site.Author.name }}
       {{- .Params.Author | default .Site.Author.name }} · {{ end }}
-      {{- .Date.Format "January 2, 2006" -}}
+      {{- .Date.Format "2006-01-02" -}}
     </div>
   </header>
   <div class="post-content">{{ .Content }}</div>
@@ -19,26 +19,6 @@
       {{- end }}
     </ul>
   </footer>
-  {{- end }}
-  <!-- Comments area start -->
-  {{- if not (eq .Params.comments false) }}
-  {{- if .Site.DisqusShortname }}
-  <div id="disqus_thread"></div>
-  <script>
-    var disqus_shortname = '{{ .Site.DisqusShortname }}';
-    (function() {
-      var d = document, s = d.createElement('script');
-      s.src = 'https://' + disqus_shortname + '.disqus.com/embed.js';
-      s.setAttribute('data-timestamp', +new Date());
-      (d.head || d.body).appendChild(s);
-    })();
-  </script>
-  <noscript>
-    Please enable JavaScript to view the
-    <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-  </noscript>
-  <!-- Comments area end -->
-  {{- end }}
   {{- end }}
 </article>
 
