--- a/themes/mypaper/layouts/_default/list.html
+++ b/themes/mypaper/layouts/_default/list.html
@@ -18,7 +18,7 @@
     <h2>{{ .Title }}</h2>
   </header>
   <section class="entry-content">
-   <p>{{ .Summary | plainify | htmlUnescape }}...</p>
+   <p>{{ .Summary | plainify | htmlUnescape }}</p>
   </section>
   <footer class="entry-footer">
     <time>{{ .Date.Format "2006-01-02" }}</time>
