add changelog field to frontmatter

--- a/themes/mypaper/layouts/_default/list.html
+++ b/themes/mypaper/layouts/_default/list.html
@@ -21,7 +21,9 @@
    <p>{{ .Summary | plainify | htmlUnescape }}</p>
   </section>
   <footer class="entry-footer">
-    <time>{{ .Date.Format "2006-01-02" }}</time>
+    {{- $date := .Date.Format "2006-01-02" }}
+    {{- $lastmod := .Lastmod.Format "2006-01-02" }}
+    Posted on <time>{{ $date }}</time>{{ if ne $date $lastmod }}, updated on <time>{{ $lastmod }}</time>{{ end }}
   </footer>
   <a class="entry-link" href="{{ .Permalink }}"></a>
 </article>
